--- a/Mercado-Liebre/public/css/styles.css
+++ b/Mercado-Liebre/public/css/styles.css
@@ -227,6 +227,7 @@ section.footer-text h3 {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
+        align-items: center;
         padding: 15px;
     }
 
@@ -242,7 +243,7 @@ section.footer-text h3 {
     }
 
     .cuotas {
-        width: 40%;
+        width: 25%;
         margin-top: 20px;
         margin-bottom: 10px;
         text-align: center;
